--- a/samples/CodeWithCompiledMarkup/CodeWithCompiledMarkup.csproj
+++ b/samples/CodeWithCompiledMarkup/CodeWithCompiledMarkup.csproj
@@ -56,6 +56,10 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="MarkupExtensions\ButtonContentValueProviderExtension.cs" />
+    <Compile Include="MarkupExtensions\UpperCaseConverterExtension.cs" />
+    <Compile Include="StylesDemo.xaml.cs">
+      <DependentUpon>StylesDemo.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Utility\ButtonContentProvider.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -69,6 +73,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="StylesDemo.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
