--- a/samples/CodeWithCompiledMarkup/CodeWithCompiledMarkup.csproj
+++ b/samples/CodeWithCompiledMarkup/CodeWithCompiledMarkup.csproj
@@ -55,6 +55,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Calculator.cs" />
     <Compile Include="Converters\NameValueConverter.cs" />
     <Compile Include="Converters\SliderValueConverter.cs" />
     <Compile Include="DataBindingDemo.xaml.cs">
