--- a/samples/MVVMDemo/MVVMDemo.csproj
+++ b/samples/MVVMDemo/MVVMDemo.csproj
@@ -56,6 +56,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Commands\AddCommandClass.cs" />
+    <Compile Include="Commands\DelegateCommandClass.cs" />
     <Compile Include="ViewModels\CalculatorViewModel.cs" />
     <Compile Include="Views\Calculator.xaml.cs">
       <DependentUpon>Calculator.xaml</DependentUpon>
